@@ -15,6 +15,8 @@
  */
 package com.yahoo.athenz.zpe;
 
+import com.oath.auth.KeyRefresher;
+import com.oath.auth.Utils;
 import com.yahoo.athenz.auth.AuthorityConsts;
 import com.yahoo.athenz.auth.impl.RoleAuthority;
 import com.yahoo.athenz.auth.token.AccessToken;
@@ -176,9 +178,10 @@ public class AuthZpeClient {
 
         // initialize the access token signing key resolver
 
-        setAccessTokenSignKeyResolver(null, null);
-        
+        initializeAccessTokenSignKeyResolver();
+
         // save the last zts api call time, and the allowed interval between api calls
+
         setMillisBetweenZtsCalls(Long.parseLong(System.getProperty(ZPE_PROP_MILLIS_BETWEEN_ZTS_CALLS, Long.toString(30 * 1000 * 60))));
     }
 
@@ -186,6 +189,35 @@ public class AuthZpeClient {
         if (LOG.isDebugEnabled()) {
             LOG.debug("Init: load the ZPE");
         }
+    }
+
+    public static void close() {
+        if (LOG.isDebugEnabled()) {
+            LOG.debug("close: finishing the ZPE");
+        }
+        zpeClt.close();
+    }
+
+    public static void initializeAccessTokenSignKeyResolver() {
+        String serverUrl = System.getProperty(ZpeConsts.ZPE_PROP_JWK_URI);
+        if (serverUrl == null || serverUrl.isEmpty()) {
+            throw new IllegalArgumentException("Missing required property: " + ZpeConsts.ZPE_PROP_JWK_URI);
+        }
+
+        final String keyPath = System.getProperty(ZpeConsts.ZPE_PROP_JWK_PRIVATE_KEY_PATH);
+        final String certPath = System.getProperty(ZpeConsts.ZPE_PROP_JWK_X509_CERT_PATH);
+        SSLContext sslContext = null;
+        if (keyPath != null && !keyPath.isEmpty() && certPath != null && !certPath.isEmpty()) {
+            try {
+                KeyRefresher keyRefresher = Utils.generateKeyRefresher(null, certPath, keyPath);
+                keyRefresher.startup();
+                sslContext = Utils.buildSSLContext(keyRefresher.getKeyManagerProxy(),
+                        keyRefresher.getTrustManagerProxy());
+            } catch (Exception ex) {
+                LOG.error("Unable to initialize key refresher: {}", ex.getMessage());
+            }
+        }
+        setAccessTokenSignKeyResolver(serverUrl, sslContext);
     }
 
     /**
@@ -261,8 +293,8 @@ public class AuthZpeClient {
         
         PublicKeyStoreFactory publicKeyStoreFactory;
         try {
-            publicKeyStoreFactory = (PublicKeyStoreFactory) Class.forName(className).newInstance();
-        } catch (InstantiationException | IllegalAccessException | ClassNotFoundException ex) {
+            publicKeyStoreFactory = (PublicKeyStoreFactory) Class.forName(className).getDeclaredConstructor().newInstance();
+        } catch (Exception ex) {
             LOG.error("Invalid PublicKeyStore class: {}, error: {}", className, ex.getMessage());
             throw new RuntimeException(ex);
         }
@@ -280,17 +312,22 @@ public class AuthZpeClient {
      * @param sslContext ssl context to be used when establishing connection
      */
     public static void setAccessTokenSignKeyResolver(final String serverUrl, SSLContext sslContext) {
-        accessSignKeyResolver = new JwtsSigningKeyResolver(serverUrl, sslContext);
+        AuthZpeClient.setAccessTokenSignKeyResolver(serverUrl, sslContext, null);
     }
 
-    /**
-     * Include the specified public key and id in the access token
-     * signing resolver
-     * @param keyId public key id
-     * @param key public key for the given id
+     /**
+     * Set the server connection details for the sign key resolver for access
+     * tokens. By default, the resolver is looking for the "athenz.athenz_conf"
+     * system property, parses the athenz.conf file and loads any public keys
+     * defined. The caller can also specify the server URL, the sslcontext and the proxy URL
+     * (if required) for the resolver to call and fetch the public keys that
+     * will be required to verify the token signatures
+     * @param serverUrl server url to fetch json web keys
+     * @param sslContext ssl context to be used when establishing connection
+     * @param proxyUrl if a proxy is required, specify the proxy URL
      */
-    public static void addAccessTokenSignKeyResolverKey(final String keyId, PublicKey key) {
-        accessSignKeyResolver.addPublicKey(keyId, key);
+    public static void setAccessTokenSignKeyResolver(final String serverUrl, SSLContext sslContext, final String proxyUrl) {
+        accessSignKeyResolver = new JwtsSigningKeyResolver(serverUrl, sslContext, proxyUrl);
     }
 
     /**
@@ -299,12 +336,10 @@ public class AuthZpeClient {
      * @param className ZPE Client implementation class name
      */
     public static void setZPEClientClass(final String className) {
-        
         try {
-            zpeClt = (ZpeClient) Class.forName(className).newInstance();
-        } catch (InstantiationException | IllegalAccessException | ClassNotFoundException ex) {
-            LOG.error("Unable to instantiate zpe class: {}, error: {}",
-                    className, ex.getMessage());
+            zpeClt = (ZpeClient) Class.forName(className).getDeclaredConstructor().newInstance();
+        } catch (Exception ex) {
+            LOG.error("Unable to instantiate zpe class: {}, error: {}", className, ex.getMessage());
             throw new RuntimeException(ex);
         }
         zpeClt.init(null);
@@ -314,7 +349,7 @@ public class AuthZpeClient {
         PublicKey publicKey = publicKeyStore.getZtsKey(keyId);
         if (publicKey == null) {
             //  fetch all zts jwk keys and update config and try again
-            publicKey = accessSignKeyResolver.getPublicKey(keyId); 
+            publicKey = accessSignKeyResolver.getPublicKey(keyId);
         }
         return publicKey;
     }
@@ -904,7 +939,7 @@ public class AuthZpeClient {
         final String msgPrefix = "allowActionZPE: domain(" + tokenDomain + ") action(" + action +
                 ") resource(" + resource + ")";
 
-        if (roles == null || roles.size() == 0) {
+        if (roles == null || roles.isEmpty()) {
             LOG.error("{} ERROR: No roles so access denied", msgPrefix);
             return AccessCheckStatus.DENY_ROLETOKEN_INVALID;
         }
