@@ -19,6 +19,7 @@ import static com.yahoo.athenz.zts.AccessTokenTestFileHelper.setupInvalidTokenFi
 import static com.yahoo.athenz.zts.AccessTokenTestFileHelper.setupTokenFile;
 import static org.mockito.ArgumentMatchers.any;
 import static org.mockito.ArgumentMatchers.anyString;
+import static org.mockito.Mockito.when;
 import static org.testng.Assert.assertEquals;
 import static org.testng.Assert.assertFalse;
 import static org.testng.Assert.assertNotEquals;
@@ -39,17 +40,15 @@ import java.net.URISyntaxException;
 import java.nio.charset.StandardCharsets;
 import java.nio.file.Path;
 import java.nio.file.Paths;
-import java.security.PrivateKey;
-import java.security.PublicKey;
+import java.security.*;
 import java.security.cert.*;
+import java.security.cert.Certificate;
 import java.util.*;
 
-import javax.net.ssl.HostnameVerifier;
-import javax.net.ssl.SSLContext;
-import javax.net.ssl.SSLPeerUnverifiedException;
-import javax.net.ssl.SSLSession;
+import javax.net.ssl.*;
 
 import org.mockito.ArgumentCaptor;
+import org.mockito.MockedStatic;
 import org.mockito.Mockito;
 import org.testng.annotations.AfterMethod;
 import org.testng.annotations.BeforeClass;
@@ -97,6 +96,20 @@ public class ZTSClientTest {
     @Test
     public void testGetHeader() {
         assertEquals(ZTSClient.getHeader(), "Athenz-Role-Auth");
+    }
+
+    @Test
+    public void testClientWithRetry() {
+        System.setProperty(ZTSClient.ZTS_CLIENT_PROP_MAX_RETRIES, "3");
+        System.setProperty(ZTSClient.ZTS_CLIENT_PROP_ATHENZ_CONF, "src/test/resources/athenz.conf");
+        ZTSClient.initConfigValues();
+        Principal principal = SimplePrincipal.create("user_domain", "user",
+                "v=S1;d=user_domain;n=user;s=sig", PRINCIPAL_AUTHORITY);
+        ZTSClient client = new ZTSClient(null, principal);
+        assertEquals(client.getZTSUrl(), "https://dev.zts.athenzcompany.com:4443/zts/v1");
+        System.clearProperty(ZTSClient.ZTS_CLIENT_PROP_ATHENZ_CONF);
+        System.clearProperty(ZTSClient.ZTS_CLIENT_PROP_MAX_RETRIES);
+        client.close();
     }
 
     @Test
@@ -548,7 +561,7 @@ public class ZTSClientTest {
     @Test
     public void testUpdateServicePrincipalException() {
         ServiceIdentityProvider siaProvider = Mockito.mock(ServiceIdentityProvider.class);
-        Mockito.when(siaProvider.getIdentity(Mockito.eq("iaas.athenz"),
+        when(siaProvider.getIdentity(Mockito.eq("iaas.athenz"),
                 Mockito.eq("ci"))).thenThrow(IllegalArgumentException.class);
 
         ZTSClient client = new ZTSClient("http://localhost:4080/",
@@ -742,7 +755,7 @@ public class ZTSClientTest {
 
         com.yahoo.athenz.auth.token.RoleToken token = new com.yahoo.athenz.auth.token.RoleToken(roleToken.getToken());
         assertEquals(token.getDomain(), "coretech");
-        assertEquals(1, token.getRoles().size());
+        assertEquals(token.getRoles().size(), 1);
         assertTrue(token.getRoles().contains("role1"));
 
         // now we're going to get a token again and this time we should get back
@@ -775,7 +788,7 @@ public class ZTSClientTest {
 
         com.yahoo.athenz.auth.token.RoleToken token = new com.yahoo.athenz.auth.token.RoleToken(roleToken.getToken());
         assertEquals(token.getDomain(), "coretech");
-        assertEquals(1, token.getRoles().size());
+        assertEquals(token.getRoles().size(), 1);
         assertTrue(token.getRoles().contains("role1"));
 
         // now we're going to get a token again and this time we should get back
@@ -783,7 +796,7 @@ public class ZTSClientTest {
         // the sia provider instead of principal given
 
         SimpleServiceIdentityProvider siaProvider = Mockito.mock(SimpleServiceIdentityProvider.class);
-        Mockito.when(siaProvider.getIdentity("user_domain", "user")).thenReturn(principal);
+        when(siaProvider.getIdentity("user_domain", "user")).thenReturn(principal);
 
         ZTSClient client2 = new ZTSClient("http://localhost:4080", "user_domain", "user", siaProvider);
         client2.setZTSRDLGeneratedClient(ztsClientMock);
@@ -814,7 +827,7 @@ public class ZTSClientTest {
                 "auth_creds", PRINCIPAL_AUTHORITY);
 
         ServiceIdentityProvider siaProvider = Mockito.mock(ServiceIdentityProvider.class);
-        Mockito.when(siaProvider.getIdentity(any(),
+        when(siaProvider.getIdentity(any(),
                 any())).thenReturn(principal);
 
         ZTSClient client = new ZTSClient("http://localhost:4080/", "user_domain",
@@ -913,7 +926,7 @@ public class ZTSClientTest {
         final Principal principal = SimplePrincipal.create("user_domain", "user", "auth_creds", PRINCIPAL_AUTHORITY);
 
         ServiceIdentityProvider siaProvider = Mockito.mock(ServiceIdentityProvider.class);
-        Mockito.when(siaProvider.getIdentity(any(),
+        when(siaProvider.getIdentity(any(),
                 any())).thenReturn(principal);
 
         ZTSClient client = new ZTSClient("http://localhost:4080/", "user_domain",
@@ -1026,7 +1039,7 @@ public class ZTSClientTest {
                 "auth_creds", PRINCIPAL_AUTHORITY);
 
         ServiceIdentityProvider siaProvider = Mockito.mock(ServiceIdentityProvider.class);
-        Mockito.when(siaProvider.getIdentity(any(),
+        when(siaProvider.getIdentity(any(),
                 any())).thenReturn(principal);
 
         ZTSClient client = new ZTSClient("http://localhost:4080/", "user_domain",
@@ -1150,7 +1163,7 @@ public class ZTSClientTest {
                 "auth_creds", PRINCIPAL_AUTHORITY);
 
         ServiceIdentityProvider siaProvider = Mockito.mock(ServiceIdentityProvider.class);
-        Mockito.when(siaProvider.getIdentity(any(),
+        when(siaProvider.getIdentity(any(),
                 any())).thenReturn(principal);
 
         ZTSClient client = new ZTSClient("http://localhost:4080/", "user_domain",
@@ -1294,7 +1307,7 @@ public class ZTSClientTest {
                 "auth_creds", PRINCIPAL_AUTHORITY);
 
         ServiceIdentityProvider siaProvider = Mockito.mock(ServiceIdentityProvider.class);
-        Mockito.when(siaProvider.getIdentity(any(),
+        when(siaProvider.getIdentity(any(),
                 any())).thenReturn(principal);
 
         ZTSClient client = new ZTSClient("http://localhost:4080/", "user_domain",
@@ -1388,7 +1401,7 @@ public class ZTSClientTest {
                 "auth_creds", PRINCIPAL_AUTHORITY);
 
         ServiceIdentityProvider siaProvider = Mockito.mock(ServiceIdentityProvider.class);
-        Mockito.when(siaProvider.getIdentity(any(),
+        when(siaProvider.getIdentity(any(),
                 any())).thenReturn(principal);
 
         ZTSClientNotificationSender notificationSender = Mockito.mock(ZTSClientNotificationSender.class);
@@ -1504,7 +1517,7 @@ public class ZTSClientTest {
                 "auth_creds", PRINCIPAL_AUTHORITY);
 
         ServiceIdentityProvider siaProvider = Mockito.mock(ServiceIdentityProvider.class);
-        Mockito.when(siaProvider.getIdentity(any(),
+        when(siaProvider.getIdentity(any(),
                 any())).thenReturn(principal);
 
         ZTSClientNotificationSender notificationSender = Mockito.mock(ZTSClientNotificationSender.class);
@@ -1563,7 +1576,7 @@ public class ZTSClientTest {
         // assert notification sent
         ArgumentCaptor<ZTSClientNotification> argument = ArgumentCaptor.forClass(ZTSClientNotification.class);
         Mockito.verify(notificationSender, Mockito.times(1)).sendNotification(argument.capture());
-        assertEquals(domain1, argument.getValue().getDomain());
+        assertEquals(argument.getValue().getDomain(), domain1);
 
         // Restore credentials, now fetching should work fine
         ztsClientMock.setAwsCreds(Timestamp.fromCurrentTime(), domain1, "role1");
@@ -1591,7 +1604,7 @@ public class ZTSClientTest {
                 "auth_creds", PRINCIPAL_AUTHORITY);
 
         ServiceIdentityProvider siaProvider = Mockito.mock(ServiceIdentityProvider.class);
-        Mockito.when(siaProvider.getIdentity(any(),
+        when(siaProvider.getIdentity(any(),
                 any())).thenReturn(principal);
 
         ZTSClient client = new ZTSClient("http://localhost:4080/", "user_domain",
@@ -1745,9 +1758,9 @@ public class ZTSClientTest {
         OpenIDConfig openIDConfig = client.getOpenIDConfig();
         assertNotNull(openIDConfig);
 
-        assertEquals("https://athenz.cloud", openIDConfig.getIssuer());
-        assertEquals("https://athenz.cloud/oauth2/keys", openIDConfig.getJwks_uri());
-        assertEquals("https://athenz.cloud/access", openIDConfig.getAuthorization_endpoint());
+        assertEquals(openIDConfig.getIssuer(), "https://athenz.cloud");
+        assertEquals(openIDConfig.getJwks_uri(), "https://athenz.cloud/oauth2/keys");
+        assertEquals(openIDConfig.getAuthorization_endpoint(), "https://athenz.cloud/access");
         assertEquals(Collections.singletonList("RS256"), openIDConfig.getId_token_signing_alg_values_supported());
         assertEquals(Collections.singletonList("id_token"), openIDConfig.getResponse_types_supported());
         assertEquals(Collections.singletonList("public"), openIDConfig.getSubject_types_supported());
@@ -2080,7 +2093,7 @@ public class ZTSClientTest {
         try {
             client.getDomainSignedPolicyData(null, null, responseHeaders);
             fail();
-        } catch (ResourceException ex) {
+        } catch (ClientResourceException ex) {
             assertEquals(ex.getCode(), 400);
         }
 
@@ -2111,14 +2124,14 @@ public class ZTSClientTest {
         try {
             client.postSignedPolicyRequest("invalid-domain", new SignedPolicyRequest(), null, responseHeaders);
             fail();
-        } catch (ResourceException ex) {
+        } catch (ClientResourceException ex) {
             assertEquals(ex.getCode(), 404);
         }
 
         try {
             client.postSignedPolicyRequest(null, new SignedPolicyRequest(), null, responseHeaders);
             fail();
-        } catch (ResourceException ex) {
+        } catch (ClientResourceException ex) {
             assertEquals(ex.getCode(), 400);
         }
 
@@ -2145,7 +2158,7 @@ public class ZTSClientTest {
         try {
             client.getTenantDomains("unknown", "user", "admin", "storage");
             fail();
-        } catch (ResourceException ex) {
+        } catch (ClientResourceException ex) {
             assertEquals(ex.getCode(), 404);
         } catch (Exception ex) {
             fail();
@@ -2168,15 +2181,15 @@ public class ZTSClientTest {
 
         AWSTemporaryCredentials awsCreds = client.getAWSTemporaryCredentials("coretech", "role");
         assertNotNull(awsCreds);
-        assertEquals("accessKeyId", awsCreds.getAccessKeyId());
-        assertEquals("secretAccessKey", awsCreds.getSecretAccessKey());
+        assertEquals(awsCreds.getAccessKeyId(), "accessKeyId");
+        assertEquals(awsCreds.getSecretAccessKey(), "secretAccessKey");
         assertTrue(awsCreds.getSessionToken().startsWith("sessionToken"));
         currentTime = awsCreds.getExpiration();
 
         AWSTemporaryCredentials awsCreds2 = client.getAWSTemporaryCredentials("coretech", "role");
         assertNotNull(awsCreds2);
-        assertEquals("accessKeyId", awsCreds2.getAccessKeyId());
-        assertEquals("secretAccessKey", awsCreds2.getSecretAccessKey());
+        assertEquals(awsCreds2.getAccessKeyId(), "accessKeyId");
+        assertEquals(awsCreds2.getSecretAccessKey(), "secretAccessKey");
         assertTrue(awsCreds2.getSessionToken().startsWith("sessionToken"));
         assertEquals(currentTime.millis() / 1000, awsCreds2.getExpiration().millis() / 1000);
 
@@ -2243,7 +2256,7 @@ public class ZTSClientTest {
 
         Certificate[] certs1 = new Certificate[1];
         X509Certificate cert1 = Mockito.mock(X509Certificate.class);
-        Mockito.when(cert1.getSubjectAlternativeNames()).thenReturn(altNames1);
+        when(cert1.getSubjectAlternativeNames()).thenReturn(altNames1);
         certs1[0] = cert1;
 
         ArrayList<List<?>> altNames2 = new ArrayList<>();
@@ -2259,10 +2272,10 @@ public class ZTSClientTest {
 
         Certificate[] certs2 = new Certificate[1];
         X509Certificate cert2 = Mockito.mock(X509Certificate.class);
-        Mockito.when(cert2.getSubjectAlternativeNames()).thenReturn(altNames2);
+        when(cert2.getSubjectAlternativeNames()).thenReturn(altNames2);
         certs2[0] = cert2;
 
-        Mockito.when(session.getPeerCertificates()).thenReturn(certs1).thenReturn(certs2);
+        when(session.getPeerCertificates()).thenReturn(certs1).thenReturn(certs2);
 
         assertTrue(hostnameVerifier.verify("host1", session));
         assertFalse(hostnameVerifier.verify("host1", session));
@@ -2288,7 +2301,7 @@ public class ZTSClientTest {
         try {
             client.getWorkloadsByIP("127.0.0.1");
             fail();
-        } catch (ResourceException re) {
+        } catch (ClientResourceException re) {
             assertEquals(re.getCode(), 404);
         }
         client.close();
@@ -2312,7 +2325,7 @@ public class ZTSClientTest {
         try {
             client.getWorkloadsByService("bad-domain", "api");
             fail();
-        } catch (ResourceException re) {
+        } catch (ClientResourceException re) {
             assertEquals(re.getCode(), 404);
         }
         client.close();
@@ -2346,7 +2359,7 @@ public class ZTSClientTest {
         try {
             client.getTransportRules("bad-domain", "api");
             fail();
-        } catch (ResourceException re) {
+        } catch (ClientResourceException re) {
             assertEquals(re.getCode(), 404);
         }
 
@@ -2414,7 +2427,7 @@ public class ZTSClientTest {
 
         com.yahoo.athenz.auth.token.RoleToken token = new com.yahoo.athenz.auth.token.RoleToken(roleToken.getToken());
         assertEquals(token.getDomain(), "coretech");
-        assertEquals(1, token.getRoles().size());
+        assertEquals(token.getRoles().size(), 1);
         assertTrue(token.getRoles().contains("role1"));
         assertEquals(token.getProxyUser(), "user_domain.user4");
 
@@ -2592,11 +2605,11 @@ public class ZTSClientTest {
                 , 307, 400, 401, 403, 404, 409, 410, 412, 415, 500, 501, 503);
 
         for (int code : codes) {
-            ResourceException e = new ResourceException(code);
+            ClientResourceException e = new ClientResourceException(code);
             assertNotNull(e.getData());
         }
 
-        ResourceException ex = new ResourceException(400);
+        ClientResourceException ex = new ClientResourceException(400);
 
         assertEquals(ex.getCode(), 400);
         assertEquals(ex.getData().toString(), "{code: 400, message: \"Bad Request\"}");
@@ -2612,7 +2625,7 @@ public class ZTSClientTest {
         ZTSClient.AWSHostNameVerifier hostnameVerifier = new ZTSClient.AWSHostNameVerifier("host1");
 
         SSLSession session = Mockito.mock(SSLSession.class);
-        Mockito.when(session.getPeerCertificates()).thenReturn(null);
+        when(session.getPeerCertificates()).thenReturn(null);
 
         assertFalse(hostnameVerifier.verify("host1", session));
 
@@ -2664,7 +2677,7 @@ public class ZTSClientTest {
         certs[0] = cert;
 
         SSLSession session = Mockito.mock(SSLSession.class);
-        Mockito.when(session.getPeerCertificates()).thenReturn(certs);
+        when(session.getPeerCertificates()).thenReturn(certs);
 
         assertFalse(hostnameVerifier.verify("unknown", session));
         client.close();
@@ -2791,6 +2804,26 @@ public class ZTSClientTest {
     }
 
     @Test
+    public void testGenerateRoleCertificateRequestWithSpiffeTrustDomain() {
+
+        File privkey = new File("./src/test/resources/unit_test_private_k0.pem");
+        PrivateKey privateKey = Crypto.loadPrivateKey(privkey);
+
+        RoleCertificateRequest req = ZTSClient.generateRoleCertificateRequest("coretech",
+                "test", "sports", "readers", privateKey, null, "test.athenz.io", 3600, "athenz.io");
+        assertNotNull(req);
+
+        PKCS10CertificationRequest certReq = Crypto.getPKCS10CertRequest(req.getCsr());
+        assertEquals(Crypto.extractX509CSRCommonName(certReq), "sports:role.readers");
+        assertEquals(Crypto.extractX509CSREmail(certReq), "coretech.test@test.athenz.io");
+
+        List<String> uris = Crypto.extractX509CSRURIs(certReq);
+        assertEquals(uris.size(), 2);
+        assertEquals(uris.get(0), "spiffe://athenz.io/ns/sports/ra/readers");
+        assertEquals(uris.get(1), "athenz://principal/coretech.test");
+    }
+
+    @Test
     public void testGenerateInstanceRefreshRequestTopDomain() {
 
         File privkey = new File("./src/test/resources/unit_test_private_k0.pem");
@@ -2801,8 +2834,29 @@ public class ZTSClientTest {
         assertNotNull(req);
 
         PKCS10CertificationRequest certReq = Crypto.getPKCS10CertRequest(req.getCsr());
-        assertEquals("coretech.test", Crypto.extractX509CSRCommonName(certReq));
-        assertEquals("test.coretech.aws.athenz.cloud", Crypto.extractX509CSRDnsNames(certReq).get(0));
+        assertEquals(Crypto.extractX509CSRCommonName(certReq), "coretech.test");
+        assertEquals(Crypto.extractX509CSRDnsNames(certReq).get(0), "test.coretech.aws.athenz.cloud");
+
+        List<String> uris = Crypto.extractX509CSRURIs(certReq);
+        assertEquals(uris.get(0), "spiffe://coretech/sa/test");
+    }
+
+    @Test
+    public void testGenerateInstanceRefreshRequestTopDomainSpiffeTrustDomain() {
+
+        File privkey = new File("./src/test/resources/unit_test_private_k0.pem");
+        PrivateKey privateKey = Crypto.loadPrivateKey(privkey);
+
+        InstanceRefreshRequest req = ZTSClient.generateInstanceRefreshRequest("coretech",
+                "test", privateKey, null, "athenz.io", 3600, "athenz.io", "prod");
+        assertNotNull(req);
+
+        PKCS10CertificationRequest certReq = Crypto.getPKCS10CertRequest(req.getCsr());
+        assertEquals(Crypto.extractX509CSRCommonName(certReq), "coretech.test");
+        assertEquals(Crypto.extractX509CSRDnsNames(certReq).get(0), "test.coretech.athenz.io");
+
+        List<String> uris = Crypto.extractX509CSRURIs(certReq);
+        assertEquals(uris.get(0), "spiffe://athenz.io/ns/prod/sa/coretech.test");
     }
 
     @Test
@@ -2816,12 +2870,12 @@ public class ZTSClientTest {
         assertNotNull(req);
 
         PKCS10CertificationRequest certReq = Crypto.getPKCS10CertRequest(req.getCsr());
-        assertEquals("coretech.system.test", Crypto.extractX509CSRCommonName(certReq));
+        assertEquals(Crypto.extractX509CSRCommonName(certReq), "coretech.system.test");
 
         X500Name x500name = certReq.getSubject();
         RDN cnRdn = x500name.getRDNs(BCStyle.CN)[0];
-        assertEquals("coretech.system.test", IETFUtils.valueToString(cnRdn.getFirst().getValue()));
-        assertEquals("test.coretech-system.aws.athenz.cloud", Crypto.extractX509CSRDnsNames(certReq).get(0));
+        assertEquals(IETFUtils.valueToString(cnRdn.getFirst().getValue()), "coretech.system.test");
+        assertEquals(Crypto.extractX509CSRDnsNames(certReq).get(0), "test.coretech-system.aws.athenz.cloud");
     }
 
     @Test
@@ -3019,19 +3073,19 @@ public class ZTSClientTest {
         try {
             client.getAWSCredentialProvider("domain", "role");
             fail();
-        } catch (ResourceException ex) {
+        } catch (ClientResourceException ex) {
             assertEquals(ex.getCode(), 503);
         }
         try {
             client.getAWSCredentialProvider("domain", "role", "id", 100, 300);
             fail();
-        } catch (ResourceException ex) {
+        } catch (ClientResourceException ex) {
             assertEquals(ex.getCode(), 503);
         }
         try {
             client.getAWSCredentialProvider("domain", "role", "id", null, null);
             fail();
-        } catch (ResourceException ex) {
+        } catch (ClientResourceException ex) {
             assertEquals(ex.getCode(), 503);
         }
         client.close();
@@ -3114,7 +3168,7 @@ public class ZTSClientTest {
         ZTSClientService.RoleTokenDescriptor descr = new ZTSClientService.RoleTokenDescriptor("signedToken");
         assertNotNull(descr);
 
-        assertEquals("signedToken", descr.getSignedToken());
+        assertEquals(descr.getSignedToken(), "signedToken");
     }
 
     @Test
@@ -3124,35 +3178,35 @@ public class ZTSClientTest {
                 "auth_creds", PRINCIPAL_AUTHORITY);
         ZTSClient client = new ZTSClient("http://localhost:4080", principal);
 
-        assertEquals("grant_type=client_credentials&scope=coretech%3Adomain",
-                client.generateAccessTokenRequestBody("coretech", null, null, null, null, null, 0));
-        assertEquals("grant_type=client_credentials&expires_in=100&scope=coretech%3Adomain",
-                client.generateAccessTokenRequestBody("coretech", null, null, null, null, null, 100));
-        assertEquals("grant_type=client_credentials&expires_in=100&scope=coretech%3Adomain",
-                client.generateAccessTokenRequestBody("coretech", null, "", null, null, null, 100));
-        assertEquals("grant_type=client_credentials&expires_in=100&scope=coretech%3Adomain+openid+coretech%3Aservice.api",
-                client.generateAccessTokenRequestBody("coretech", null, "api", null, null, null, 100));
-        assertEquals("grant_type=client_credentials&expires_in=100&scope=coretech%3Arole.readers+openid+coretech%3Aservice.api",
-                client.generateAccessTokenRequestBody("coretech", Collections.singletonList("readers"), "api", null, null, "", 100));
-        assertEquals("grant_type=client_credentials&expires_in=100&scope=coretech%3Arole.readers+openid+coretech%3Aservice.api",
-                client.generateAccessTokenRequestBody("coretech", Collections.singletonList("readers"), "api", "", null, null, 100));
-        assertEquals("grant_type=client_credentials&expires_in=100&scope=coretech%3Arole.readers+openid+coretech%3Aservice.api&proxy_for_principal=user.proxy",
-                client.generateAccessTokenRequestBody("coretech", Collections.singletonList("readers"), "api", "user.proxy", null, "", 100));
+        assertEquals(client.generateAccessTokenRequestBody("coretech", null, null, null, null, null, 0),
+                "grant_type=client_credentials&scope=coretech%3Adomain");
+        assertEquals(client.generateAccessTokenRequestBody("coretech", null, null, null, null, null, 100),
+                "grant_type=client_credentials&expires_in=100&scope=coretech%3Adomain");
+        assertEquals(client.generateAccessTokenRequestBody("coretech", null, "", null, null, null, 100),
+                "grant_type=client_credentials&expires_in=100&scope=coretech%3Adomain");
+        assertEquals(client.generateAccessTokenRequestBody("coretech", null, "api", null, null, null, 100),
+                "grant_type=client_credentials&expires_in=100&scope=coretech%3Adomain+openid+coretech%3Aservice.api");
+        assertEquals(client.generateAccessTokenRequestBody("coretech", Collections.singletonList("readers"), "api", null, null, "", 100),
+                "grant_type=client_credentials&expires_in=100&scope=coretech%3Arole.readers+openid+coretech%3Aservice.api");
+        assertEquals(client.generateAccessTokenRequestBody("coretech", Collections.singletonList("readers"), "api", "", null, null, 100),
+                "grant_type=client_credentials&expires_in=100&scope=coretech%3Arole.readers+openid+coretech%3Aservice.api");
+        assertEquals(client.generateAccessTokenRequestBody("coretech", Collections.singletonList("readers"), "api", "user.proxy", null, "", 100),
+                "grant_type=client_credentials&expires_in=100&scope=coretech%3Arole.readers+openid+coretech%3Aservice.api&proxy_for_principal=user.proxy");
         List<String> roles = new ArrayList<>();
         roles.add("readers");
         roles.add("writers");
-        assertEquals("grant_type=client_credentials&expires_in=100&scope=coretech%3Arole.readers+coretech%3Arole.writers+openid+coretech%3Aservice.api",
-                client.generateAccessTokenRequestBody("coretech", roles, "api", null, null, null, 100));
+        assertEquals(client.generateAccessTokenRequestBody("coretech", roles, "api", null, null, null, 100),
+                "grant_type=client_credentials&expires_in=100&scope=coretech%3Arole.readers+coretech%3Arole.writers+openid+coretech%3Aservice.api");
         final String authorizationDetails = "[{\"type\":\"message_access\",\"location\":[\"https://location1\"," +
                 "\"https://location2\"],\"identifier\":\"id1\"}]";
         final String encodedDetails = "%5B%7B%22type%22%3A%22message_access%22%2C%22location%22%3A%5B%22https%3A%2F%2Flocation1%22%2C%22https%3A%2F%2Flocation2%22%5D%2C%22identifier%22%3A%22id1%22%7D%5D";
-        assertEquals("grant_type=client_credentials&expires_in=100&scope=coretech%3Arole.readers+openid+coretech%3Aservice.api&authorization_details=" + encodedDetails,
-                client.generateAccessTokenRequestBody("coretech", Collections.singletonList("readers"), "api", null, authorizationDetails, null, 100));
+        assertEquals(client.generateAccessTokenRequestBody("coretech", Collections.singletonList("readers"), "api", null, authorizationDetails, null, 100),
+                "grant_type=client_credentials&expires_in=100&scope=coretech%3Arole.readers+openid+coretech%3Aservice.api&authorization_details=" + encodedDetails);
         final String proxyPrincipalsEncoded = "spiffe%3A%2F%2Fathenz%2Fsa%2Fservice1%2Cspiffe%3A%2F%2Fathenz%2Fsa%2Fservice2";
-        assertEquals("grant_type=client_credentials&expires_in=100&scope=coretech%3Arole.readers+openid+coretech%3Aservice.api&authorization_details="
-                        + encodedDetails + "&proxy_principal_spiffe_uris=" + proxyPrincipalsEncoded,
-                client.generateAccessTokenRequestBody("coretech", Collections.singletonList("readers"), "api", null,
-                        authorizationDetails, "spiffe://athenz/sa/service1,spiffe://athenz/sa/service2", 100));
+        assertEquals(client.generateAccessTokenRequestBody("coretech", Collections.singletonList("readers"), "api", null,
+                authorizationDetails, "spiffe://athenz/sa/service1,spiffe://athenz/sa/service2", 100),
+                "grant_type=client_credentials&expires_in=100&scope=coretech%3Arole.readers+openid+coretech%3Aservice.api&authorization_details="
+                                + encodedDetails + "&proxy_principal_spiffe_uris=" + proxyPrincipalsEncoded);
 
         client.close();
     }
@@ -3208,46 +3262,46 @@ public class ZTSClientTest {
 
         assertNull(ZTSClient.getAccessTokenCacheKey(null, "service", "coretech", null, null, null, null, null));
 
-        assertEquals("p=sports;d=coretech",
-                ZTSClient.getAccessTokenCacheKey("sports", null, "coretech", null, null, null, null, null));
-        assertEquals("p=sports.api;d=coretech",
-                ZTSClient.getAccessTokenCacheKey("sports", "api", "coretech", null, null, null, null, null));
-        assertEquals("p=sports.api;d=coretech;r=readers",
-                ZTSClient.getAccessTokenCacheKey("sports", "api", "coretech",
-                        Collections.singletonList("readers"), null, null, null, null));
+        assertEquals(ZTSClient.getAccessTokenCacheKey("sports", null, "coretech", null, null, null, null, null),
+                "p=sports;d=coretech");
+        assertEquals(ZTSClient.getAccessTokenCacheKey("sports", "api", "coretech", null, null, null, null, null),
+                "p=sports.api;d=coretech");
+        assertEquals(ZTSClient.getAccessTokenCacheKey("sports", "api", "coretech",
+                Collections.singletonList("readers"), null, null, null, null),
+                "p=sports.api;d=coretech;r=readers");
 
         List<String> roles = new ArrayList<>();
         roles.add("writers");
         roles.add("readers");
-        assertEquals("p=sports.api;d=coretech;r=readers,writers",
-                ZTSClient.getAccessTokenCacheKey("sports", "api", "coretech", roles, null, null, null, null));
+        assertEquals(ZTSClient.getAccessTokenCacheKey("sports", "api", "coretech", roles, null, null, null, null),
+                "p=sports.api;d=coretech;r=readers,writers");
 
-        assertEquals("p=sports.api;d=coretech;r=readers,writers",
-                ZTSClient.getAccessTokenCacheKey("sports", "api", "coretech", roles, "", null, null, null));
+        assertEquals(ZTSClient.getAccessTokenCacheKey("sports", "api", "coretech", roles, "", null, null, null),
+                "p=sports.api;d=coretech;r=readers,writers");
 
-        assertEquals("p=sports.api;d=coretech;r=readers,writers;o=backend",
-                ZTSClient.getAccessTokenCacheKey("sports", "api", "coretech", roles, "backend", null, null, null));
+        assertEquals(ZTSClient.getAccessTokenCacheKey("sports", "api", "coretech", roles, "backend", null, null, null),
+                "p=sports.api;d=coretech;r=readers,writers;o=backend");
 
         // using tenant domain details from principal object
 
-        assertEquals("p=user_domain.user;d=coretech;r=readers,writers;o=backend",
-                client.getAccessTokenCacheKey("coretech", roles, "backend", null, null, null));
+        assertEquals(client.getAccessTokenCacheKey("coretech", roles, "backend", null, null, null),
+                "p=user_domain.user;d=coretech;r=readers,writers;o=backend");
 
         // using authorization details
 
-        assertEquals("p=sports.api;d=coretech;r=readers,writers;o=backend;z=ZHMaRw4r9BWIPOWxVv9kDcCMTFzXm3nCUzNs9SA5aL8",
-                ZTSClient.getAccessTokenCacheKey("sports", "api", "coretech", roles, "backend", null,
-                        "[{\"type\": \"message\",\"uuid\": \"uuid-12345678\"}]", null));
+        assertEquals(ZTSClient.getAccessTokenCacheKey("sports", "api", "coretech", roles, "backend", null,
+                "[{\"type\": \"message\",\"uuid\": \"uuid-12345678\"}]", null),
+                "p=sports.api;d=coretech;r=readers,writers;o=backend;z=ZHMaRw4r9BWIPOWxVv9kDcCMTFzXm3nCUzNs9SA5aL8");
 
-        assertEquals("p=sports.api;d=coretech;r=readers,writers;o=backend;z=ZHMaRw4r9BWIPOWxVv9kDcCMTFzXm3nCUzNs9SA5aL8",
-                ZTSClient.getAccessTokenCacheKey("sports", "api", "coretech", roles, "backend", null,
-                        "[{\"type\": \"message\",\"uuid\": \"uuid-12345678\"}]", ""));
+        assertEquals(ZTSClient.getAccessTokenCacheKey("sports", "api", "coretech", roles, "backend", null,
+                "[{\"type\": \"message\",\"uuid\": \"uuid-12345678\"}]", ""),
+                "p=sports.api;d=coretech;r=readers,writers;o=backend;z=ZHMaRw4r9BWIPOWxVv9kDcCMTFzXm3nCUzNs9SA5aL8");
 
         // using proxy principal spiffe uris
 
-        assertEquals("p=sports.api;d=coretech;r=readers,writers;o=backend;z=ZHMaRw4r9BWIPOWxVv9kDcCMTFzXm3nCUzNs9SA5aL8;s=spiffe://athenz/sa/service1",
-                ZTSClient.getAccessTokenCacheKey("sports", "api", "coretech", roles, "backend", null,
-                        "[{\"type\": \"message\",\"uuid\": \"uuid-12345678\"}]", "spiffe://athenz/sa/service1"));
+        assertEquals(ZTSClient.getAccessTokenCacheKey("sports", "api", "coretech", roles, "backend", null,
+                "[{\"type\": \"message\",\"uuid\": \"uuid-12345678\"}]", "spiffe://athenz/sa/service1"),
+                "p=sports.api;d=coretech;r=readers,writers;o=backend;z=ZHMaRw4r9BWIPOWxVv9kDcCMTFzXm3nCUzNs9SA5aL8;s=spiffe://athenz/sa/service1");
         client.close();
     }
 
@@ -3267,11 +3321,9 @@ public class ZTSClientTest {
     }
 
     @Test
-    public void testGetAccessTokenFromFile() {
-        File ecPublicKey = new File("./src/test/resources/ec_public.key");
-        JwtsSigningKeyResolver resolver = new JwtsSigningKeyResolver(null, null);
-        PublicKey publicKey = Crypto.loadPublicKey(ecPublicKey);
-        resolver.addPublicKey("eckey1", publicKey);
+    public void testGetAccessTokenFromFile() throws IOException {
+        File jwksUri = new File("./src/test/resources/jwt_jwks.json");
+        JwtsSigningKeyResolver resolver = new JwtsSigningKeyResolver("file://" + jwksUri.getCanonicalPath(), null);
         Path path = Paths.get("./src/test/resources/");
         System.setProperty(ZTSAccessTokenFileLoader.ACCESS_TOKEN_PATH_PROPERTY, path.toString());
         setupTokenFile();
@@ -3281,10 +3333,11 @@ public class ZTSClientTest {
                 "auth_creds", PRINCIPAL_AUTHORITY);
 
         ZTSRDLClientMock ztsClientMock = new ZTSRDLClientMock();
+        ZTSClient.setAccessTokenSignKeyResolver(resolver);
+        ZTSClient.resetZTSAccessTokenFileLoader();
+        ZTSClient.initZTSAccessTokenFileLoader("http://localhost:4080", null);
         ZTSClient client = new ZTSClient("http://localhost:4080", principal);
         client.setZTSRDLGeneratedClient(ztsClientMock);
-        ZTSClient.setAccessTokenSignKeyResolver(resolver);
-        ZTSClient.initZTSAccessTokenFileLoader();
 
         AccessTokenResponse accessTokenResponse = client.getAccessToken("test.domain", Collections.singletonList("admin"), 3600);
         assertNotNull(accessTokenResponse);
@@ -3306,13 +3359,13 @@ public class ZTSClientTest {
 
         AccessTokenResponse accessTokenResponse = client.getAccessToken("coretech", null, 3600);
         assertNotNull(accessTokenResponse);
-        assertEquals("accesstoken", accessTokenResponse.getAccess_token());
+        assertEquals(accessTokenResponse.getAccess_token(), "accesstoken");
         assertEquals((int) accessTokenResponse.getExpires_in(), 3600);
         assertNull(accessTokenResponse.getId_token());
 
         accessTokenResponse = client.getAccessToken("coretech", Collections.singletonList("role1"), 3600);
         assertNotNull(accessTokenResponse);
-        assertEquals("accesstoken", accessTokenResponse.getAccess_token());
+        assertEquals(accessTokenResponse.getAccess_token(), "accesstoken");
         assertEquals((int) accessTokenResponse.getExpires_in(), 3600);
         assertNull(accessTokenResponse.getId_token());
 
@@ -3320,7 +3373,7 @@ public class ZTSClientTest {
 
         accessTokenResponse = client.getAccessToken("coretech", Collections.singletonList("role1"), 3600);
         assertNotNull(accessTokenResponse);
-        assertEquals("accesstoken", accessTokenResponse.getAccess_token());
+        assertEquals(accessTokenResponse.getAccess_token(), "accesstoken");
         assertEquals((int) accessTokenResponse.getExpires_in(), 3600);
         assertNull(accessTokenResponse.getId_token());
 
@@ -3328,24 +3381,24 @@ public class ZTSClientTest {
 
         accessTokenResponse = client.getAccessToken("coretech", null, "backend", 3600, false);
         assertNotNull(accessTokenResponse);
-        assertEquals("accesstoken", accessTokenResponse.getAccess_token());
-        assertEquals("idtoken", accessTokenResponse.getId_token());
+        assertEquals(accessTokenResponse.getAccess_token(), "accesstoken");
+        assertEquals(accessTokenResponse.getId_token(), "idtoken");
         assertEquals((int) accessTokenResponse.getExpires_in(), 3600);
 
         // now with id token and cache disabled
 
         accessTokenResponse = client.getAccessToken("coretech", null, "backend", 3600, true);
         assertNotNull(accessTokenResponse);
-        assertEquals("accesstoken", accessTokenResponse.getAccess_token());
-        assertEquals("idtoken", accessTokenResponse.getId_token());
+        assertEquals(accessTokenResponse.getAccess_token(), "accesstoken");
+        assertEquals(accessTokenResponse.getId_token(), "idtoken");
         assertEquals((int) accessTokenResponse.getExpires_in(), 3600);
 
 
         ZTSClient.setCacheDisable(true);
         accessTokenResponse = client.getAccessToken("coretech", null, "backend", 3600, true);
         assertNotNull(accessTokenResponse);
-        assertEquals("accesstoken", accessTokenResponse.getAccess_token());
-        assertEquals("idtoken", accessTokenResponse.getId_token());
+        assertEquals(accessTokenResponse.getAccess_token(), "accesstoken");
+        assertEquals(accessTokenResponse.getId_token(), "idtoken");
         assertEquals((int) accessTokenResponse.getExpires_in(), 3600);
         ZTSClient.setCacheDisable(false);
 
@@ -3367,14 +3420,14 @@ public class ZTSClientTest {
 
         AccessTokenResponse accessTokenResponse = client.getAccessToken("coretech", "role1", authorizationDetails, 3600);
         assertNotNull(accessTokenResponse);
-        assertEquals("accesstoken-authz-details", accessTokenResponse.getAccess_token());
+        assertEquals(accessTokenResponse.getAccess_token(), "accesstoken-authz-details");
         assertEquals((int) accessTokenResponse.getExpires_in(), 3600);
 
         // the second request should be addressed from the cache
 
         accessTokenResponse = client.getAccessToken("coretech", "role1", authorizationDetails, 3600);
         assertNotNull(accessTokenResponse);
-        assertEquals("accesstoken-authz-details", accessTokenResponse.getAccess_token());
+        assertEquals(accessTokenResponse.getAccess_token(), "accesstoken-authz-details");
         assertEquals((int) accessTokenResponse.getExpires_in(), 3600);
 
         client.close();
@@ -3394,7 +3447,7 @@ public class ZTSClientTest {
             client.getAccessToken("weather", null, 500);
             fail();
         } catch (ZTSClientException ex) {
-            assertEquals(404, ex.getCode());
+            assertEquals(ex.getCode(), 404);
         }
 
         // look for regular general exception
@@ -3403,7 +3456,7 @@ public class ZTSClientTest {
             client.getAccessToken("exception", null, 500);
             fail();
         } catch (ZTSClientException ex) {
-            assertEquals(400, ex.getCode());
+            assertEquals(ex.getCode(), 400);
         }
 
         // add an entry to the cache and expect to find the entry
@@ -3422,7 +3475,7 @@ public class ZTSClientTest {
             client.getAccessToken("weather", null, null, 500, true);
             fail();
         } catch (ZTSClientException ex) {
-            assertEquals(404, ex.getCode());
+            assertEquals(ex.getCode(), 404);
         }
 
         // look for regular general exception
@@ -3431,7 +3484,7 @@ public class ZTSClientTest {
             client.getAccessToken("exception", null, null, 500, true);
             fail();
         } catch (ZTSClientException ex) {
-            assertEquals(400, ex.getCode());
+            assertEquals(ex.getCode(), 400);
         }
 
         // with cache enabled we'll get our entries back even if
@@ -3439,11 +3492,11 @@ public class ZTSClientTest {
 
         AccessTokenResponse result = client.getAccessToken("weather", null, 500);
         assertNotNull(result);
-        assertEquals("accesstoken1", result.getAccess_token());
+        assertEquals(result.getAccess_token(), "accesstoken1");
 
         result = client.getAccessToken("exception", null, 500);
         assertNotNull(result);
-        assertEquals("accesstoken1", result.getAccess_token());
+        assertEquals(result.getAccess_token(), "accesstoken1");
 
         client.close();
     }
@@ -3504,7 +3557,7 @@ public class ZTSClientTest {
                 "auth_creds", PRINCIPAL_AUTHORITY);
 
         ServiceIdentityProvider siaProvider = Mockito.mock(ServiceIdentityProvider.class);
-        Mockito.when(siaProvider.getIdentity(any(),
+        when(siaProvider.getIdentity(any(),
                 any())).thenReturn(principal);
 
         ZTSClient client = new ZTSClient("http://localhost:4080/", "user_domain",
@@ -3618,14 +3671,14 @@ public class ZTSClientTest {
             client.getInstanceRegisterToken("sys.auth.zts", "bad-domain", "api", "id-001");
             fail();
         } catch (ZTSClientException ex) {
-            assertEquals(ex.getCode(), ResourceException.NOT_FOUND);
+            assertEquals(ex.getCode(), ClientResourceException.NOT_FOUND);
         }
 
         try {
             client.getInstanceRegisterToken("sys.auth.zts", "exc", "api", "id-001");
             fail();
         } catch (ZTSClientException ex) {
-            assertEquals(ex.getCode(), ResourceException.BAD_REQUEST);
+            assertEquals(ex.getCode(), ClientResourceException.BAD_REQUEST);
         }
 
         client.close();
@@ -3642,7 +3695,7 @@ public class ZTSClientTest {
                 .setImplementationTitle("title")
                 .setImplementationVendor("vendor")
                 .setImplementationVersion("version");
-        Mockito.when(c.getInfo()).thenReturn(info)
+        when(c.getInfo()).thenReturn(info)
                 .thenThrow(new ZTSClientException(401, "fail"))
                 .thenThrow(new IllegalArgumentException("other-error"));
 
@@ -3657,7 +3710,7 @@ public class ZTSClientTest {
             client.getInfo();
             fail();
         } catch (ZTSClientException ex) {
-            assertEquals(401, ex.getCode());
+            assertEquals(ex.getCode(), 401);
         }
 
         // last time with std exception
@@ -3666,7 +3719,7 @@ public class ZTSClientTest {
             client.getInfo();
             fail();
         } catch (ZTSClientException ex) {
-            assertEquals(400, ex.getCode());
+            assertEquals(ex.getCode(), 400);
         }
     }
 
@@ -3963,13 +4016,14 @@ public class ZTSClientTest {
                 "auth_creds", PRINCIPAL_AUTHORITY);
 
         ServiceIdentityProvider siaProvider = Mockito.mock(ServiceIdentityProvider.class);
-        Mockito.when(siaProvider.getIdentity(any(),
+        when(siaProvider.getIdentity(any(),
                 any())).thenReturn(principal);
 
         ZTSClient client = new ZTSClient("http://localhost:4080/", "user_domain",
                 "user", siaProvider);
         ZTSClient.setPrefetchInterval(1);
         client.setZTSRDLGeneratedClient(ztsClientMock);
+        client.clearScheduledItems();
 
         // initially, id token was never fetched.
         assertTrue(ztsClientMock.getLastIdTokenFetchedTime("openid sports.api:role.readers") < 0);
@@ -4041,7 +4095,7 @@ public class ZTSClientTest {
                 .setClientId("athenz.api")
                 .setExpiryTime(3600);
         ExternalCredentialsResponse response = new ExternalCredentialsResponse();
-        Mockito.when(c.postExternalCredentialsRequest(anyString(), anyString(), any()))
+        when(c.postExternalCredentialsRequest(anyString(), anyString(), any()))
                 .thenReturn(response)
                 .thenThrow(new ZTSClientException(401, "fail"))
                 .thenThrow(new IllegalArgumentException("other-error"));
@@ -4055,7 +4109,7 @@ public class ZTSClientTest {
             client.postExternalCredentialsRequest("gcp", "athenz", request);
             fail();
         } catch (ZTSClientException ex) {
-            assertEquals(401, ex.getCode());
+            assertEquals(ex.getCode(), 401);
         }
 
         // last time with std exception
@@ -4064,7 +4118,7 @@ public class ZTSClientTest {
             client.postExternalCredentialsRequest("gcp", "athenz", request);
             fail();
         } catch (ZTSClientException ex) {
-            assertEquals(400, ex.getCode());
+            assertEquals(ex.getCode(), 400);
         }
     }
 
@@ -4076,7 +4130,7 @@ public class ZTSClientTest {
         client.close();
     }
 
-    @Test(expectedExceptions = IllegalArgumentException.class)
+    @Test(expectedExceptions = NullPointerException.class)
     public void testConstructorWithInvalidProxyUrlException() {
         ServiceIdentityProvider siaProvider = Mockito.mock(ServiceIdentityProvider.class);
 
@@ -4173,11 +4227,42 @@ public class ZTSClientTest {
 
         ZTSClient client = new ZTSClient("http://localhost:4080", principal);
 
-        assertEquals(503, client.getExceptionCode(new java.net.UnknownHostException()));
-        assertEquals(503, client.getExceptionCode(new java.net.SocketException()));
-        assertEquals(503, client.getExceptionCode(new java.net.SocketTimeoutException()));
-        assertEquals(400, client.getExceptionCode(new ZTSClientException(403, "Forbidden")));
+        assertEquals(client.getExceptionCode(new java.net.UnknownHostException()), 503);
+        assertEquals(client.getExceptionCode(new java.net.SocketException()), 503);
+        assertEquals(client.getExceptionCode(new java.net.SocketTimeoutException()), 503);
+        assertEquals(client.getExceptionCode(new ZTSClientException(403, "Forbidden")), 400);
 
         client.close();
+    }
+
+    @Test
+    public void testZTSClientSslContext() {
+        System.setProperty(ZTSClient.ZTS_CLIENT_PROP_KEY_MANAGER_PWD_KEYGROUP_NAME, "athenz");
+        System.setProperty(ZTSClient.ZTS_CLIENT_PROP_KEYSTORE_PWD_KEYGROUP_NAME, "athenz");
+        System.setProperty(ZTSClient.ZTS_CLIENT_PROP_TRUSTSTORE_PWD_KEYGROUP_NAME, "athenz");
+        System.setProperty(ZTSClient.ZTS_CLIENT_PROP_KEYSTORE_PASSWORD, "changeit");
+        System.setProperty(ZTSClient.ZTS_CLIENT_PROP_KEY_MANAGER_PASSWORD, "changeit");
+        System.setProperty(ZTSClient.ZTS_CLIENT_PROP_KEYSTORE_PATH, "src/test/resources/unit.jks");
+        try (MockedStatic<KeyStore> keyStoreMockedStatic = Mockito.mockStatic(KeyStore.class);
+             MockedStatic<KeyManagerFactory> keyManagerFactoryMockedStatic = Mockito.mockStatic(KeyManagerFactory.class)) {
+            KeyStore ksMock = Mockito.mock(KeyStore.class);
+            when(KeyStore.getInstance(any())).thenReturn(ksMock);
+            KeyManager kmMock = Mockito.mock(KeyManager.class);
+            KeyManagerFactory kmf = Mockito.mock(KeyManagerFactory.class);
+            when(kmf.getInstance(any())).thenReturn(kmf);
+            when(kmf.getKeyManagers()).thenReturn(new KeyManager[]{kmMock});
+
+            ZTSClient client = new ZTSClient();
+            client.close();
+        } catch (KeyStoreException | NoSuchAlgorithmException ignored) {
+            fail();
+        } finally {
+            System.clearProperty(ZTSClient.ZTS_CLIENT_PROP_KEY_MANAGER_PWD_KEYGROUP_NAME);
+            System.clearProperty(ZTSClient.ZTS_CLIENT_PROP_KEYSTORE_PWD_KEYGROUP_NAME);
+            System.clearProperty(ZTSClient.ZTS_CLIENT_PROP_TRUSTSTORE_PWD_KEYGROUP_NAME);
+            System.clearProperty(ZTSClient.ZTS_CLIENT_PROP_KEYSTORE_PASSWORD);
+            System.clearProperty(ZTSClient.ZTS_CLIENT_PROP_KEY_MANAGER_PASSWORD);
+            System.clearProperty(ZTSClient.ZTS_CLIENT_PROP_KEYSTORE_PATH);
+        }
     }
 }
