@@ -16,9 +16,10 @@
 
 package com.yahoo.athenz.zms.notification;
 
+import com.yahoo.athenz.common.server.ServerResourceException;
 import com.yahoo.athenz.common.server.notification.*;
 import com.yahoo.athenz.zms.*;
-import com.yahoo.athenz.zms.store.AthenzDomain;
+import com.yahoo.athenz.common.server.store.AthenzDomain;
 import com.yahoo.rdl.Timestamp;
 import org.mockito.Mockito;
 import org.testng.annotations.Test;
@@ -33,25 +34,26 @@ import static com.yahoo.athenz.zms.notification.ZMSNotificationManagerTest.getNo
 import static org.mockito.ArgumentMatchers.any;
 import static org.mockito.ArgumentMatchers.eq;
 import static org.testng.Assert.*;
-import static org.testng.AssertJUnit.assertEquals;
 
 public class RoleMemberExpiryNotificationTaskTest {
     final NotificationToEmailConverterCommon notificationToEmailConverterCommon = new NotificationToEmailConverterCommon(null);
 
     @Test
-    public void testSendRoleMemberExpiryRemindersException() {
+    public void testSendRoleMemberExpiryRemindersException() throws ServerResourceException {
 
         DBService dbsvc = Mockito.mock(DBService.class);
         NotificationService mockNotificationService =  Mockito.mock(NotificationService.class);
-        NotificationServiceFactory testfact = () -> mockNotificationService;
+        NotificationServiceFactory testfact = Mockito.mock(NotificationServiceFactory.class);
+        Mockito.when(testfact.create(any())).thenReturn(mockNotificationService);
 
         // we're going to throw an exception when called
 
-        Mockito.when(dbsvc.getRoleExpiryMembers(1, false)).thenThrow(new IllegalArgumentException());
+        Mockito.when(dbsvc.getRoleExpiryMembers(1)).thenThrow(new IllegalArgumentException());
         NotificationManager notificationManager = getNotificationManager(dbsvc, testfact);
 
         RoleMemberExpiryNotificationTask roleMemberExpiryNotificationTask = new RoleMemberExpiryNotificationTask(
-                dbsvc, USER_DOMAIN_PREFIX, new NotificationToEmailConverterCommon(null), false);
+                dbsvc, USER_DOMAIN_PREFIX, new NotificationToEmailConverterCommon(null));
+
         // to make sure we're not creating any notifications, we're going
         // to configure our mock to throw an exception
 
@@ -67,11 +69,12 @@ public class RoleMemberExpiryNotificationTaskTest {
     }
 
     @Test
-    public void testSendRoleMemberExpiryRemindersEmptySet() {
+    public void testSendRoleMemberExpiryRemindersEmptySet() throws ServerResourceException {
 
         DBService dbsvc = Mockito.mock(DBService.class);
         NotificationService mockNotificationService =  Mockito.mock(NotificationService.class);
-        NotificationServiceFactory testfact = () -> mockNotificationService;
+        NotificationServiceFactory testfact = Mockito.mock(NotificationServiceFactory.class);
+        Mockito.when(testfact.create(any())).thenReturn(mockNotificationService);
         NotificationManager notificationManager = getNotificationManager(dbsvc, testfact);
 
         // to make sure we're not creating any notifications, we're going
@@ -80,18 +83,19 @@ public class RoleMemberExpiryNotificationTaskTest {
         Mockito.when(mockNotificationService.notify(any())).thenThrow(new IllegalArgumentException());
 
         RoleMemberExpiryNotificationTask roleMemberExpiryNotificationTask = new RoleMemberExpiryNotificationTask(
-                dbsvc, USER_DOMAIN_PREFIX, new NotificationToEmailConverterCommon(null), false);
+                dbsvc, USER_DOMAIN_PREFIX, new NotificationToEmailConverterCommon(null));
         assertEquals(roleMemberExpiryNotificationTask.getNotifications(), new ArrayList<>());
 
         notificationManager.shutdown();
     }
 
     @Test
-    public void testSendRoleMemberExpiryReminders() {
+    public void testSendRoleMemberExpiryReminders() throws ServerResourceException {
 
         DBService dbsvc = Mockito.mock(DBService.class);
         NotificationService mockNotificationService =  Mockito.mock(NotificationService.class);
-        NotificationServiceFactory testfact = () -> mockNotificationService;
+        NotificationServiceFactory testfact = Mockito.mock(NotificationServiceFactory.class);
+        Mockito.when(testfact.create(any())).thenReturn(mockNotificationService);
 
         List<MemberRole> memberRoles = new ArrayList<>();
         memberRoles.add(new MemberRole().setRoleName("role1")
@@ -108,7 +112,7 @@ public class RoleMemberExpiryNotificationTaskTest {
         // run during init call and then the real data for the second
         // call
 
-        Mockito.when(dbsvc.getRoleExpiryMembers(1, false))
+        Mockito.when(dbsvc.getRoleExpiryMembers(1))
                 .thenReturn(null)
                 .thenReturn(expiryMembers);
 
@@ -119,28 +123,25 @@ public class RoleMemberExpiryNotificationTaskTest {
         AthenzDomain domain = new AthenzDomain("athenz1");
         List<RoleMember> roleMembers = new ArrayList<>();
         roleMembers.add(new RoleMember().setMemberName("user.jane"));
-        Role adminRole = new Role()
-                .setName("athenz1:role.admin")
-                .setRoleMembers(roleMembers);
+        Role adminRole = new Role().setName("athenz1:role.admin").setRoleMembers(roleMembers);
         List<Role> roles = new ArrayList<>();
         roles.add(adminRole);
         domain.setRoles(roles);
 
         Mockito.when(dbsvc.getRolesByDomain("athenz1")).thenReturn(domain.getRoles());
         Mockito.when(dbsvc.getRole("athenz1", "admin", Boolean.FALSE, Boolean.TRUE, Boolean.FALSE))
-                .thenThrow(new UnsupportedOperationException());
+                .thenReturn(adminRole);
 
         List<Notification> notifications = new RoleMemberExpiryNotificationTask(dbsvc, USER_DOMAIN_PREFIX,
-                new NotificationToEmailConverterCommon(null), false).getNotifications();
-
+                new NotificationToEmailConverterCommon(null)).getNotifications();
 
         // we should get 2 notifications - one for user and one for domain
         assertEquals(notifications.size(), 2);
 
         // Verify contents of notifications is as expected
-        Notification expectedFirstNotification = new Notification();
+        Notification expectedFirstNotification = new Notification(Notification.Type.ROLE_MEMBER_EXPIRY);
         expectedFirstNotification.addRecipient("user.joe");
-        expectedFirstNotification.addDetails(NOTIFICATION_DETAILS_ROLES_LIST, "athenz1;role1;user.joe;1970-01-01T00:00:00.100Z");
+        expectedFirstNotification.addDetails(NOTIFICATION_DETAILS_ROLES_LIST, "athenz1;role1;user.joe;1970-01-01T00:00:00.100Z;");
         expectedFirstNotification.addDetails("member", "user.joe");
         expectedFirstNotification.setNotificationToEmailConverter(
                 new RoleMemberExpiryNotificationTask.RoleExpiryPrincipalNotificationToEmailConverter(
@@ -148,10 +149,9 @@ public class RoleMemberExpiryNotificationTaskTest {
         expectedFirstNotification.setNotificationToMetricConverter(
                 new RoleMemberExpiryNotificationTask.RoleExpiryPrincipalNotificationToMetricConverter());
 
-        Notification expectedSecondNotification = new Notification();
+        Notification expectedSecondNotification = new Notification(Notification.Type.ROLE_MEMBER_EXPIRY);
         expectedSecondNotification.addRecipient("user.jane");
-        expectedSecondNotification.addDetails(NOTIFICATION_DETAILS_MEMBERS_LIST, "athenz1;role1;user.joe;1970-01-01T00:00:00.100Z");
-        expectedSecondNotification.addDetails("domain", "athenz1");
+        expectedSecondNotification.addDetails(NOTIFICATION_DETAILS_MEMBERS_LIST, "athenz1;role1;user.joe;1970-01-01T00:00:00.100Z;");
         expectedSecondNotification.setNotificationToEmailConverter(
                 new RoleMemberExpiryNotificationTask.RoleExpiryDomainNotificationToEmailConverter(
                         new NotificationToEmailConverterCommon(null)));
@@ -165,11 +165,12 @@ public class RoleMemberExpiryNotificationTaskTest {
     }
 
     @Test
-    public void testSendRoleMemberExpiryRemindersDisabledOverOneWeek() {
+    public void testSendRoleMemberExpiryRemindersDisabledOverOneWeek() throws ServerResourceException {
 
         DBService dbsvc = Mockito.mock(DBService.class);
         NotificationService mockNotificationService =  Mockito.mock(NotificationService.class);
-        NotificationServiceFactory testfact = () -> mockNotificationService;
+        NotificationServiceFactory testfact = Mockito.mock(NotificationServiceFactory.class);
+        Mockito.when(testfact.create(any())).thenReturn(mockNotificationService);
 
         Timestamp twoWeekExpiry = Timestamp.fromMillis(System.currentTimeMillis() + TimeUnit.MILLISECONDS.convert(14, TimeUnit.DAYS));
         Timestamp oneDayExpiry = Timestamp.fromMillis(System.currentTimeMillis() + TimeUnit.MILLISECONDS.convert(1, TimeUnit.DAYS));
@@ -193,7 +194,7 @@ public class RoleMemberExpiryNotificationTaskTest {
         // run during init call and then the real data for the second
         // call
 
-        Mockito.when(dbsvc.getRoleExpiryMembers(1, false))
+        Mockito.when(dbsvc.getRoleExpiryMembers(1))
                 .thenReturn(null)
                 .thenReturn(expiryMembers);
 
@@ -204,16 +205,14 @@ public class RoleMemberExpiryNotificationTaskTest {
         AthenzDomain domain = new AthenzDomain("athenz1");
         List<RoleMember> roleMembers = new ArrayList<>();
         roleMembers.add(new RoleMember().setMemberName("user.jane"));
-        Role adminRole = new Role()
-                .setName("athenz1:role.admin")
-                .setRoleMembers(roleMembers);
+        Role adminRole = new Role().setName("athenz1:role.admin").setRoleMembers(roleMembers);
         List<Role> roles = new ArrayList<>();
         roles.add(adminRole);
         domain.setRoles(roles);
 
         Mockito.when(dbsvc.getRolesByDomain("athenz1")).thenReturn(domain.getRoles());
         Mockito.when(dbsvc.getRole("athenz1", "admin", Boolean.FALSE, Boolean.TRUE, Boolean.FALSE))
-                .thenThrow(new UnsupportedOperationException());
+                .thenReturn(adminRole);
 
         Map<String, TagValueList> tags = new HashMap<>();
         TagValueList tagValueList = new TagValueList().setList(Collections.singletonList("4"));
@@ -223,7 +222,7 @@ public class RoleMemberExpiryNotificationTaskTest {
         Mockito.when(dbsvc.getRole("athenz1", "role2", false, false, false)).thenReturn(role);
 
         List<Notification> notifications = new RoleMemberExpiryNotificationTask(dbsvc, USER_DOMAIN_PREFIX,
-                new NotificationToEmailConverterCommon(null), false).getNotifications();
+                new NotificationToEmailConverterCommon(null)).getNotifications();
 
         // we should get 2 notifications - one for user and one for domain
         // role1 should be excluded and role2 should be included
@@ -231,9 +230,9 @@ public class RoleMemberExpiryNotificationTaskTest {
         assertEquals(notifications.size(), 2);
 
         // Verify contents of notifications is as expected
-        Notification expectedFirstNotification = new Notification();
+        Notification expectedFirstNotification = new Notification(Notification.Type.ROLE_MEMBER_EXPIRY);
         expectedFirstNotification.addRecipient("user.joe");
-        expectedFirstNotification.addDetails(NOTIFICATION_DETAILS_ROLES_LIST, "athenz1;role2;user.joe;" + oneDayExpiry);
+        expectedFirstNotification.addDetails(NOTIFICATION_DETAILS_ROLES_LIST, "athenz1;role2;user.joe;" + oneDayExpiry + ";");
         expectedFirstNotification.addDetails("member", "user.joe");
         expectedFirstNotification.setNotificationToEmailConverter(
                 new RoleMemberExpiryNotificationTask.RoleExpiryPrincipalNotificationToEmailConverter(
@@ -241,10 +240,9 @@ public class RoleMemberExpiryNotificationTaskTest {
         expectedFirstNotification.setNotificationToMetricConverter(
                 new RoleMemberExpiryNotificationTask.RoleExpiryPrincipalNotificationToMetricConverter());
 
-        Notification expectedSecondNotification = new Notification();
+        Notification expectedSecondNotification = new Notification(Notification.Type.ROLE_MEMBER_EXPIRY);
         expectedSecondNotification.addRecipient("user.jane");
-        expectedSecondNotification.addDetails(NOTIFICATION_DETAILS_MEMBERS_LIST, "athenz1;role2;user.joe;" + oneDayExpiry);
-        expectedSecondNotification.addDetails("domain", "athenz1");
+        expectedSecondNotification.addDetails(NOTIFICATION_DETAILS_MEMBERS_LIST, "athenz1;role2;user.joe;" + oneDayExpiry + ";");
         expectedSecondNotification.setNotificationToEmailConverter(
                 new RoleMemberExpiryNotificationTask.RoleExpiryDomainNotificationToEmailConverter(
                         new NotificationToEmailConverterCommon(null)));
@@ -276,7 +274,7 @@ public class RoleMemberExpiryNotificationTaskTest {
         // run during init call and then the real data for the second
         // call
 
-        Mockito.when(dbsvc.getRoleExpiryMembers(1, false))
+        Mockito.when(dbsvc.getRoleExpiryMembers(1))
                 .thenReturn(null)
                 .thenReturn(expiryMembers);
 
@@ -287,7 +285,7 @@ public class RoleMemberExpiryNotificationTaskTest {
         Mockito.when(dbsvc.getAthenzDomain("athenz1", false)).thenReturn(null);
 
         List<Notification> notifications = new RoleMemberExpiryNotificationTask(dbsvc, USER_DOMAIN_PREFIX,
-                new NotificationToEmailConverterCommon(null), false).getNotifications();
+                new NotificationToEmailConverterCommon(null)).getNotifications();
 
         // we should get 0 notifications
         assertEquals(notifications, new ArrayList<>());
@@ -306,7 +304,7 @@ public class RoleMemberExpiryNotificationTaskTest {
         details.put("reason", "test reason");
         details.put("requester", "user.requester");
 
-        Notification notification = new Notification();
+        Notification notification = new Notification(Notification.Type.ROLE_MEMBER_EXPIRY);
         notification.setDetails(details);
         RoleMemberExpiryNotificationTask.RoleExpiryDomainNotificationToEmailConverter converter =
                 new RoleMemberExpiryNotificationTask.RoleExpiryDomainNotificationToEmailConverter(
@@ -326,7 +324,7 @@ public class RoleMemberExpiryNotificationTaskTest {
         // with one bad entry that should be skipped
 
         details.put(NOTIFICATION_DETAILS_MEMBERS_LIST,
-                "athenz;role1;user.joe;2020-12-01T12:00:00.000Z|athenz;role1;user.jane;2020-12-01T12:00:00.000Z|athenz;role3;user.bad");
+                "athenz;role1;user.joe;2020-12-01T12:00:00.000Z;notify+details|athenz;role1;user.jane;2020-12-01T12:00:00.000Z;|athenz;role3;user.bad");
 
         NotificationEmail notificationAsEmailWithMembers = converter.getNotificationAsEmail(notification);
         body = notificationAsEmailWithMembers.getBody();
@@ -335,6 +333,7 @@ public class RoleMemberExpiryNotificationTaskTest {
         assertTrue(body.contains("user.jane"));
         assertTrue(body.contains("role1"));
         assertTrue(body.contains("2020-12-01T12:00:00.000Z"));
+        assertTrue(body.contains("notify details"));
 
         // make sure the bad entries are not included
 
@@ -347,10 +346,10 @@ public class RoleMemberExpiryNotificationTaskTest {
         assertFalse(body.contains("link.to.athenz.channel.com"));
 
         // now try the expiry roles reminder
-        notification = new Notification();
+        notification = new Notification(Notification.Type.ROLE_MEMBER_EXPIRY);
         notification.setDetails(details);
         details.put(NOTIFICATION_DETAILS_ROLES_LIST,
-                "athenz1;role1;user.joe;2020-12-01T12:00:00.000Z|athenz2;role2;user.joe;2020-12-01T12:00:00.000Z");
+                "athenz1;role1;user.joe;2020-12-01T12:00:00.000Z;notify%20details|athenz2;role2;user.joe;2020-12-01T12:00:00.000Z;");
         RoleMemberExpiryNotificationTask.RoleExpiryPrincipalNotificationToEmailConverter principalConverter =
                 new RoleMemberExpiryNotificationTask.RoleExpiryPrincipalNotificationToEmailConverter(
                         new NotificationToEmailConverterCommon(null));
@@ -363,6 +362,7 @@ public class RoleMemberExpiryNotificationTaskTest {
         assertTrue(body.contains("role1"));
         assertTrue(body.contains("role2"));
         assertTrue(body.contains("2020-12-01T12:00:00.000Z"));
+        assertTrue(body.contains("notify details"));
 
         // Make sure support text and url do not appear
 
@@ -376,7 +376,7 @@ public class RoleMemberExpiryNotificationTaskTest {
 
     @Test
     public void testGetEmailSubject() {
-        Notification notification = new Notification();
+        Notification notification = new Notification(Notification.Type.ROLE_MEMBER_EXPIRY);
         RoleMemberExpiryNotificationTask.RoleExpiryDomainNotificationToEmailConverter converter =
                 new RoleMemberExpiryNotificationTask.RoleExpiryDomainNotificationToEmailConverter(
                         new NotificationToEmailConverterCommon(null));
@@ -384,7 +384,7 @@ public class RoleMemberExpiryNotificationTaskTest {
         String subject = notificationAsEmail.getSubject();
         assertEquals(subject, "Athenz Domain Role Member Expiration Notification");
 
-        notification = new Notification();
+        notification = new Notification(Notification.Type.ROLE_MEMBER_EXPIRY);
         RoleMemberExpiryNotificationTask.RoleExpiryPrincipalNotificationToEmailConverter principalConverter =
                 new RoleMemberExpiryNotificationTask.RoleExpiryPrincipalNotificationToEmailConverter(
                         new NotificationToEmailConverterCommon(null));
@@ -414,7 +414,7 @@ public class RoleMemberExpiryNotificationTaskTest {
         memberRole.setAuditRef("testAuditRef");
 
         StringBuilder detailStringBuilder = stringer.getDetailString(memberRole);
-        String expectedStringBuilder = "testDomainName;testRoleName;testMemberName;1970-01-01T00:00:00.100Z";
+        String expectedStringBuilder = "testDomainName;testRoleName;testMemberName;1970-01-01T00:00:00.100Z;";
         assertEquals(detailStringBuilder.toString(), expectedStringBuilder);
     }
 
@@ -429,7 +429,7 @@ public class RoleMemberExpiryNotificationTaskTest {
         details.put(NOTIFICATION_DETAILS_MEMBERS_LIST,
                 "dom1;role1;user.joe;" + twentyFiveDaysFromNow + "|dom1;role1;user.jane;" + twentyDaysFromNow + "|dom1;role1;user.bad");
 
-        Notification notification = new Notification();
+        Notification notification = new Notification(Notification.Type.ROLE_MEMBER_EXPIRY);
         notification.setDetails(details);
 
         RoleMemberExpiryNotificationTask.RoleExpiryDomainNotificationToMetricConverter domainConverter =
@@ -464,7 +464,7 @@ public class RoleMemberExpiryNotificationTaskTest {
                 "athenz1;role1;user.joe;" + twentyFiveDaysFromNow + "|athenz2;role2;user.joe;" + twentyDaysFromNow);
         details.put(NOTIFICATION_DETAILS_MEMBER, "user.joe");
 
-        notification = new Notification();
+        notification = new Notification(Notification.Type.ROLE_MEMBER_EXPIRY);
         notification.setDetails(details);
 
         RoleMemberExpiryNotificationTask.RoleExpiryPrincipalNotificationToMetricConverter principalConverter =
@@ -504,28 +504,28 @@ public class RoleMemberExpiryNotificationTaskTest {
 
         // Role where user review notifications disabled
         Map<String, TagValueList> tags = new HashMap<>();
-        tags.put(ZMSConsts.DISABLE_EXPIRATION_NOTIFICATIONS_TAG, new TagValueList().setList(Arrays.asList("1")));
+        tags.put(ZMSConsts.DISABLE_EXPIRATION_NOTIFICATIONS_TAG, new TagValueList().setList(List.of("1")));
         Role noUserNotif = new Role()
                 .setName("athenz1:role.no-user-notif")
                 .setTags(tags);
 
         // Role where user admin review notifications disabled
         tags = new HashMap<>();
-        tags.put(ZMSConsts.DISABLE_EXPIRATION_NOTIFICATIONS_TAG, new TagValueList().setList(Arrays.asList("2")));
+        tags.put(ZMSConsts.DISABLE_EXPIRATION_NOTIFICATIONS_TAG, new TagValueList().setList(List.of("2")));
         Role noAdminNotif = new Role()
                 .setName("athenz1:role.no-admin-notif")
                 .setTags(tags);
 
         // Role where all review notifications disabled
         tags = new HashMap<>();
-        tags.put(ZMSConsts.DISABLE_EXPIRATION_NOTIFICATIONS_TAG, new TagValueList().setList(Arrays.asList("3")));
+        tags.put(ZMSConsts.DISABLE_EXPIRATION_NOTIFICATIONS_TAG, new TagValueList().setList(List.of("3")));
         Role noNotifs = new Role()
                 .setName("athenz1:role.no-notifs")
                 .setTags(tags);
 
         // Role with invalid tags - all notifications enabled
         tags = new HashMap<>();
-        tags.put(ZMSConsts.DISABLE_EXPIRATION_NOTIFICATIONS_TAG, new TagValueList().setList(Arrays.asList("notANumber")));
+        tags.put(ZMSConsts.DISABLE_EXPIRATION_NOTIFICATIONS_TAG, new TagValueList().setList(List.of("notANumber")));
         Role invalid = new Role()
                 .setName("athenz1:role.invalid")
                 .setTags(tags);
@@ -557,22 +557,22 @@ public class RoleMemberExpiryNotificationTaskTest {
                 .setMemberName("user.user5");
 
         RoleMemberExpiryNotificationTask roleMemberExpiryNotificationTask = new RoleMemberExpiryNotificationTask(
-                dbsvc, USER_DOMAIN_PREFIX, notificationToEmailConverterCommon, false);
+                dbsvc, USER_DOMAIN_PREFIX, notificationToEmailConverterCommon);
         RoleMemberExpiryNotificationTask.ReviewDisableRoleMemberNotificationFilter notificationFilter =
                 roleMemberExpiryNotificationTask.new ReviewDisableRoleMemberNotificationFilter();
         EnumSet<DisableNotificationEnum> disabledNotificationState = notificationFilter.getDisabledNotificationState(memberRole);
         assertTrue(disabledNotificationState.isEmpty());
 
         disabledNotificationState = notificationFilter.getDisabledNotificationState(memberRoleDisabledUserNotif);
-        assertEquals(1, disabledNotificationState.size());
+        assertEquals(disabledNotificationState.size(), 1);
         assertTrue(disabledNotificationState.contains(DisableNotificationEnum.USER));
 
         disabledNotificationState = notificationFilter.getDisabledNotificationState(memberRoleDisabledAdminNotif);
-        assertEquals(1, disabledNotificationState.size());
+        assertEquals(disabledNotificationState.size(), 1);
         assertTrue(disabledNotificationState.contains(DisableNotificationEnum.ADMIN));
 
         disabledNotificationState = notificationFilter.getDisabledNotificationState(memberRoleDisabledNotifs);
-        assertEquals(2, disabledNotificationState.size());
+        assertEquals(disabledNotificationState.size(), 2);
         assertTrue(disabledNotificationState.containsAll(Arrays.asList(DisableNotificationEnum.ADMIN,
                 DisableNotificationEnum.USER)));
 
